# nonebot-plugin-moegoe

./: .gitignore  LICENSE  README.md  __init__.py  profile.toml  pyproject.toml  upload_pypi.sh  utils.py
.github/workflows/: build_upload.yml
nonebot_plugin_moegoe/: __init__.py  profile.toml  utils.py
