[tool.poetry]
name = "nonebot-plugin-moegoe"
version = "0.10.0"
description = "VITS AI合成原神角色语音"
license = "MIT"
authors = ["yiyuiii <yiyuiii@foxmail.com>"]
readme = "README.md"
homepage = "https://github.com/yiyuiii/nonebot-plugin-moegoe"
repository = "https://github.com/yiyuiii/nonebot-plugin-moegoe"
documentation = "https://github.com/yiyuiii/nonebot-plugin-moegoe#readme"
keywords = ["nonebot", "nonebot2", "moegoe"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0b5"
nonebot-adapter-onebot = "^2.1.1"
httpx = "^0.23.0"
rtoml = "^0.9.0"
gradio_client = "^0.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"